src/fatworm/parser/FatwormParser.java
// $ANTLR 3.4 Fatworm.g 2014-03-28 17:40:43
 package fatworm.parser; 

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class FatwormParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "A", "ALL", "AND", "ANY", "AS", "ASC", "AUTO_INCREMENT", "AVG", "B", "BOOLEAN", "BY", "C", "CHAR", "COUNT", "CREATE", "CREATE_DATABASE", "CREATE_DEFINITION", "CREATE_INDEX", "CREATE_TABLE", "CREATE_UNIQUE_INDEX", "D", "DATABASE", "DATETIME", "DECIMAL", "DEFAULT", "DELETE", "DESC", "DIGIT", "DISTINCT", "DROP", "DROP_DATABASE", "DROP_INDEX", "DROP_TABLE", "E", "EXISTS", "F", "FALSE", "FLOAT", "FLOAT_LITERAL", "FROM", "G", "GROUP", "H", "HAVING", "I", "ID", "IN", "INDEX", "INSERT", "INSERT_COLUMNS", "INSERT_SUBQUERY", "INSERT_VALUES", "INT", "INTEGER_LITERAL", "INTO", "J", "K", "KEY", "L", "LETTER", "M", "MAX", "MIN", "N", "NOT", "NOT_EXISTS", "NULL", "O", "ON", "OR", "ORDER", "P", "PRIMARY", "PRIMARY_KEY", "Q", "R", "S", "SELECT", "SELECT_DISTINCT", "SET", "STRING_LITERAL", "SUM", "T", "TABLE", "TIMESTAMP", "TRUE", "U", "UNIQUE", "UPDATE", "UPDATE_PAIR", "USE", "USE_DATABASE", "V", "VALUES", "VARCHAR", "W", "WHERE", "WS", "X", "Y", "Z", "'%'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", "'<'", "'<='", "'<>'", "'='", "'>'", "'>='"
    };

    public static final int EOF=-1;
    public static final int T__105=105;
    public static final int T__106=106;
    public static final int T__107=107;
    public static final int T__108=108;
    public static final int T__109=109;
    public static final int T__110=110;
    public static final int T__111=111;
    public static final int T__112=112;
    public static final int T__113=113;
    public static final int T__114=114;
    public static final int T__115=115;
    public static final int T__116=116;
    public static final int T__117=117;
    public static final int T__118=118;
    public static final int T__119=119;
    public static final int A=4;
    public static final int ALL=5;
    public static final int AND=6;
    public static final int ANY=7;
    public static final int AS=8;
    public static final int ASC=9;
    public static final int AUTO_INCREMENT=10;
    public static final int AVG=11;
    public static final int B=12;
    public static final int BOOLEAN=13;
    public static final int BY=14;
    public static final int C=15;
    public static final int CHAR=16;
    public static final int COUNT=17;
    public static final int CREATE=18;
    public static final int CREATE_DATABASE=19;
    public static final int CREATE_DEFINITION=20;
    public static final int CREATE_INDEX=21;
    public static final int CREATE_TABLE=22;
    public static final int CREATE_UNIQUE_INDEX=23;
    public static final int D=24;
    public static final int DATABASE=25;
    public static final int DATETIME=26;
    public static final int DECIMAL=27;
    public static final int DEFAULT=28;
    public static final int DELETE=29;
    public static final int DESC=30;
    public static final int DIGIT=31;
    public static final int DISTINCT=32;
    public static final int DROP=33;
    public static final int DROP_DATABASE=34;
    public static final int DROP_INDEX=35;
    public static final int DROP_TABLE=36;
    public static final int E=37;
    public static final int EXISTS=38;
    public static final int F=39;
    public static final int FALSE=40;
    public static final int FLOAT=41;
    public static final int FLOAT_LITERAL=42;
    public static final int FROM=43;
    public static final int G=44;
    public static final int GROUP=45;
    public static final int H=46;
    public static final int HAVING=47;
    public static final int I=48;
    public static final int ID=49;
    public static final int IN=50;
    public static final int INDEX=51;
    public static final int INSERT=52;
    public static final int INSERT_COLUMNS=53;
    public static final int INSERT_SUBQUERY=54;
    public static final int INSERT_VALUES=55;
    public static final int INT=56;
    public static final int INTEGER_LITERAL=57;
    public static final int INTO=58;
    public static final int J=59;
    public static final int K=60;
    public static final int KEY=61;
    public static final int L=62;
    public static final int LETTER=63;
    public static final int M=64;
    public static final int MAX=65;
    public static final int MIN=66;
    public static final int N=67;
    public static final int NOT=68;
    public static final int NOT_EXISTS=69;
    public static final int NULL=70;
    public static final int O=71;
    public static final int ON=72;
    public static final int OR=73;
    public static final int ORDER=74;
    public static final int P=75;
    public static final int PRIMARY=76;
    public static final int PRIMARY_KEY=77;
    public static final int Q=78;
    public static final int R=79;
    public static final int S=80;
    public static final int SELECT=81;
    public static final int SELECT_DISTINCT=82;
    public static final int SET=83;
    public static final int STRING_LITERAL=84;
    public static final int SUM=85;
    public static final int T=86;
    public static final int TABLE=87;
    public static final int TIMESTAMP=88;
    public static final int TRUE=89;
    public static final int U=90;
    public static final int UNIQUE=91;
    public static final int UPDATE=92;
    public static final int UPDATE_PAIR=93;
    public static final int USE=94;
    public static final int USE_DATABASE=95;
    public static final int V=96;
    public static final int VALUES=97;
    public static final int VARCHAR=98;
    public static final int W=99;
    public static final int WHERE=100;
    public static final int WS=101;
    public static final int X=102;
    public static final int Y=103;
    public static final int Z=104;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public FatwormParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public FatwormParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
        this.state.ruleMemo = new HashMap[130+1];
         

    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return FatwormParser.tokenNames; }
    public String getGrammarFileName() { return "Fatworm.g"; }


    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "statement"
    // Fatworm.g:32:1: statement : ( database_statement | table_statement | insert_statement | delete_statement | update_statement | index_statement | select_statement );
    public final FatwormParser.statement_return statement() throws RecognitionException {
        FatwormParser.statement_return retval = new FatwormParser.statement_return();
        retval.start = input.LT(1);

        int statement_StartIndex = input.index();

        Object root_0 = null;

        FatwormParser.database_statement_return database_statement1 =null;

        FatwormParser.table_statement_return table_statement2 =null;

        FatwormParser.insert_statement_return insert_statement3 =null;

        FatwormParser.delete_statement_return delete_statement4 =null;

        FatwormParser.update_statement_return update_statement5 =null;

        FatwormParser.index_statement_return index_statement6 =null;

        FatwormParser.select_statement_return select_statement7 =null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }

            // Fatworm.g:33:3: ( database_statement | table_statement | insert_statement | delete_statement | update_statement | index_statement | select_statement )
            int alt1=7;
            switch ( input.LA(1) ) {
            case CREATE:
            case DROP:
                {
                int LA1_1 = input.LA(2);

                if ( (synpred1_Fatworm()) ) {
                    alt1=1;
                }
                else if ( (synpred2_Fatworm()) ) {
                    alt1=2;
                }
                else if ( (synpred6_Fatworm()) ) {
                    alt1=6;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 1, input);

                    throw nvae;

                }
                }
                break;
            case USE:
                {
                alt1=1;
                }
                break;
            case INSERT:
                {
                alt1=3;
                }
                break;
            case DELETE:
                {
                alt1=4;
                }
                break;
            case UPDATE:
                {
                alt1=5;
                }
                break;
            case SELECT:
                {
                alt1=7;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }

            switch (alt1) {
                case 1 :
                    // Fatworm.g:33:5: database_statement
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_database_statement_in_statement151);
                    database_statement1=database_statement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, database_statement1.getTree());

                    }
                    break;
                case 2 :
                    // Fatworm.g:34:5: table_statement
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_table_statement_in_statement157);
                    table_statement2=table_statement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, table_statement2.getTree());

                    }
                    break;
                case 3 :
                    // Fatworm.g:35:5: insert_statement
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_insert_statement_in_statement163);
                    insert_statement3=insert_statement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, insert_statement3.getTree());

                    }
                    break;
                case 4 :
                    // Fatworm.g:36:5: delete_statement
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_delete_statement_in_statement169);
                    delete_statement4=delete_statement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, delete_statement4.getTree());

                    }
                    break;
                case 5 :
                    // Fatworm.g:37:5: update_statement
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_update_statement_in_statement175);
                    update_statement5=update_statement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, update_statement5.getTree());

                    }
                    break;
                case 6 :
                    // Fatworm.g:38:5: index_statement
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_index_statement_in_statement181);
                    index_statement6=index_statement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, index_statement6.getTree());

                    }
                    break;
                case 7 :
                    // Fatworm.g:39:5: select_statement
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_select_statement_in_statement187);
                    select_statement7=select_statement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, select_statement7.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 1, statement_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "statement"


    public static class database_statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "database_statement"
    // Fatworm.g:42:1: database_statement : ( CREATE DATABASE db_name -> ^( CREATE_DATABASE db_name ) | USE db_name -> ^( USE_DATABASE db_name ) | DROP DATABASE db_name -> ^( DROP_DATABASE db_name ) );
    public final FatwormParser.database_statement_return database_statement() throws RecognitionException {
        FatwormParser.database_statement_return retval = new FatwormParser.database_statement_return();
        retval.start = input.LT(1);

        int database_statement_StartIndex = input.index();

        Object root_0 = null;

        Token CREATE8=null;
        Token DATABASE9=null;
        Token USE11=null;
        Token DROP13=null;
        Token DATABASE14=null;
        FatwormParser.db_name_return db_name10 =null;

        FatwormParser.db_name_return db_name12 =null;

        FatwormParser.db_name_return db_name15 =null;


        Object CREATE8_tree=null;
        Object DATABASE9_tree=null;
        Object USE11_tree=null;
        Object DROP13_tree=null;
        Object DATABASE14_tree=null;
        RewriteRuleTokenStream stream_CREATE=new RewriteRuleTokenStream(adaptor,"token CREATE");
        RewriteRuleTokenStream stream_USE=new RewriteRuleTokenStream(adaptor,"token USE");
        RewriteRuleTokenStream stream_DATABASE=new RewriteRuleTokenStream(adaptor,"token DATABASE");
        RewriteRuleTokenStream stream_DROP=new RewriteRuleTokenStream(adaptor,"token DROP");
        RewriteRuleSubtreeStream stream_db_name=new RewriteRuleSubtreeStream(adaptor,"rule db_name");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }

            // Fatworm.g:43:3: ( CREATE DATABASE db_name -> ^( CREATE_DATABASE db_name ) | USE db_name -> ^( USE_DATABASE db_name ) | DROP DATABASE db_name -> ^( DROP_DATABASE db_name ) )
            int alt2=3;
            switch ( input.LA(1) ) {
            case CREATE:
                {
                alt2=1;
                }
                break;
            case USE:
                {
                alt2=2;
                }
                break;
            case DROP:
                {
                alt2=3;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // Fatworm.g:43:5: CREATE DATABASE db_name
                    {
                    CREATE8=(Token)match(input,CREATE,FOLLOW_CREATE_in_database_statement200); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_CREATE.add(CREATE8);


                    DATABASE9=(Token)match(input,DATABASE,FOLLOW_DATABASE_in_database_statement202); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_DATABASE.add(DATABASE9);


                    pushFollow(FOLLOW_db_name_in_database_statement204);
                    db_name10=db_name();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_db_name.add(db_name10.getTree());

                    // AST REWRITE
                    // elements: db_name
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {

                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 44:5: -> ^( CREATE_DATABASE db_name )
                    {
                        // Fatworm.g:44:8: ^( CREATE_DATABASE db_name )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        (Object)adaptor.create(CREATE_DATABASE, "CREATE_DATABASE")
                        , root_1);

                        adaptor.addChild(root_1, stream_db_name.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;
                    }

                    }
                    break;
                case 2 :
                    // Fatworm.g:45:5: USE db_name
                    {
                    USE11=(Token)match(input,USE,FOLLOW_USE_in_database_statement222); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_USE.add(USE11);


                    pushFollow(FOLLOW_db_name_in_database_statement224);
                    db_name12=db_name();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_db_name.add(db_name12.getTree());

                    // AST REWRITE
                    // elements: db_name
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {

                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 46:5: -> ^( USE_DATABASE db_name )
                    {
                        // Fatworm.g:46:8: ^( USE_DATABASE db_name )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        (Object)adaptor.create(USE_DATABASE, "USE_DATABASE")
                        , root_1);

                        adaptor.addChild(root_1, stream_db_name.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;
                    }

                    }
                    break;
                case 3 :
                    // Fatworm.g:47:5: DROP DATABASE db_name
                    {
                    DROP13=(Token)match(input,DROP,FOLLOW_DROP_in_database_statement242); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_DROP.add(DROP13);


                    DATABASE14=(Token)match(input,DATABASE,FOLLOW_DATABASE_in_database_statement244); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_DATABASE.add(DATABASE14);


                    pushFollow(FOLLOW_db_name_in_database_statement246);
                    db_name15=db_name();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_db_name.add(db_name15.getTree());

                    // AST REWRITE
                    // elements: db_name
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {

                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 48:5: -> ^( DROP_DATABASE db_name )
                    {
                        // Fatworm.g:48:8: ^( DROP_DATABASE db_name )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        (Object)adaptor.create(DROP_DATABASE, "DROP_DATABASE")
                        , root_1);

                        adaptor.addChild(root_1, stream_db_name.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 2, database_statement_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "database_statement"


    public static class table_statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "table_statement"
    // Fatworm.g:51:1: table_statement : ( CREATE TABLE tbl_name '(' create_definition ( ',' create_definition )* ')' -> ^( CREATE_TABLE tbl_name ( create_definition )* ) | DROP TABLE tbl_name ( ',' tbl_name )* -> ^( DROP_TABLE ( tbl_name )* ) );
    public final FatwormParser.table_statement_return table_statement() throws RecognitionException {
        FatwormParser.table_statement_return retval = new FatwormParser.table_statement_return();
        retval.start = input.LT(1);

        int table_statement_StartIndex = input.index();

        Object root_0 = null;

        Token CREATE16=null;
        Token TABLE17=null;
        Token char_literal19=null;
        Token char_literal21=null;
        Token char_literal23=null;
        Token DROP24=null;
        Token TABLE25=null;
        Token char_literal27=null;
        FatwormParser.tbl_name_return tbl_name18 =null;

        FatwormParser.create_definition_return create_definition20 =null;

        FatwormParser.create_definition_return create_definition22 =null;

        FatwormParser.tbl_name_return tbl_name26 =null;

        FatwormParser.tbl_name_return tbl_name28 =null;


        Object CREATE16_tree=null;
        Object TABLE17_tree=null;
        Object char_literal19_tree=null;
        Object char_literal21_tree=null;
        Object char_literal23_tree=null;
        Object DROP24_tree=null;
        Object TABLE25_tree=null;
        Object char_literal27_tree=null;
        RewriteRuleTokenStream stream_TABLE=new RewriteRuleTokenStream(adaptor,"token TABLE");
        RewriteRuleTokenStream stream_CREATE=new RewriteRuleTokenStream(adaptor,"token CREATE");
        RewriteRuleTokenStream stream_110=new RewriteRuleTokenStream(adaptor,"token 110");
        RewriteRuleTokenStream stream_107=new RewriteRuleTokenStream(adaptor,"token 107");
        RewriteRuleTokenStream stream_DROP=new RewriteRuleTokenStream(adaptor,"token DROP");
        RewriteRuleTokenStream stream_106=new RewriteRuleTokenStream(adaptor,"token 106");
        RewriteRuleSubtreeStream stream_create_definition=new RewriteRuleSubtreeStream(adaptor,"rule create_definition");
        RewriteRuleSubtreeStream stream_tbl_name=new RewriteRuleSubtreeStream(adaptor,"rule tbl_name");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }

            // Fatworm.g:52:3: ( CREATE TABLE tbl_name '(' create_definition ( ',' create_definition )* ')' -> ^( CREATE_TABLE tbl_name ( create_definition )* ) | DROP TABLE tbl_name ( ',' tbl_name )* -> ^( DROP_TABLE ( tbl_name )* ) )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==CREATE) ) {
                alt5=1;
            }
            else if ( (LA5_0==DROP) ) {
                alt5=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }
            switch (alt5) {
                case 1 :
                    // Fatworm.g:52:5: CREATE TABLE tbl_name '(' create_definition ( ',' create_definition )* ')'
                    {
                    CREATE16=(Token)match(input,CREATE,FOLLOW_CREATE_in_table_statement271); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_CREATE.add(CREATE16);


                    TABLE17=(Token)match(input,TABLE,FOLLOW_TABLE_in_table_statement273); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_TABLE.add(TABLE17);


                    pushFollow(FOLLOW_tbl_name_in_table_statement275);
                    tbl_name18=tbl_name();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_tbl_name.add(tbl_name18.getTree());

                    char_literal19=(Token)match(input,106,FOLLOW_106_in_table_statement277); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_106.add(char_literal19);


                    pushFollow(FOLLOW_create_definition_in_table_statement279);
                    create_definition20=create_definition();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_create_definition.add(create_definition20.getTree());

                    // Fatworm.g:52:49: ( ',' create_definition )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==110) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // Fatworm.g:52:50: ',' create_definition
                    	    {
                    	    char_literal21=(Token)match(input,110,FOLLOW_110_in_table_statement282); if (state.failed) return retval; 
                    	    if ( state.backtracking==0 ) stream_110.add(char_literal21);


                    	    pushFollow(FOLLOW_create_definition_in_table_statement284);
                    	    create_definition22=create_definition();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) stream_create_definition.add(create_definition22.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);


                    char_literal23=(Token)match(input,107,FOLLOW_107_in_table_statement288); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_107.add(char_literal23);

